# messenger-api

./: .coveragerc  .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: flake8.yml  linters.yml  pytest.yml  test.yml
docker/: app.dockerfile  test.docker-compose.yml  test.dockerfile
src/: requirements.txt  setup.py
src/messenger/: __init__.py
src/messenger/api/: __main__.py  app.py  log.py
src/messenger/api/v1/: errors.py  middleware.py  models.py
src/messenger/api/v1/handlers/: __init__.py  add_user_to_chat.py  auth.py  base.py  create_chat.py  messages.py  ping.py  ping_db.py  quit.py  registaration.py  search.py
src/messenger/db_postgres/: alembic.ini  make_config.py  manager.py  schema.py
src/messenger/db_postgres/migrations/: env.py
src/messenger/db_postgres/migrations/versions/: c2feff80d4cd_initial.py
tests/: conftest.py  requirements.txt
tests/chat/: test_v1_add_user.py  test_v1_create_chat.py
tests/e2e/: test_v1_e2e.py
tests/messages/: test_v1_messages.py
tests/ping/: test_v1_ping.py  test_v1_ping_db.py
tests/user/: test_v1_auth.py  test_v1_quit.py  test_v1_reg.py
