[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["Dmitry Anfimov <lovesolaristics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
aiohttp = "^3.8.1"
aiopg = "^1.4.0"
alembic = "^1.8.1"
psycopg2_binary = "^2.9.2"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.27"
greenlet = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ruff = "^0.0.272"
sqlalchemy-utils = "^0.41.1"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# PYTEST

[tool.pytest]
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test_*"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "def __str__",
    "def __unicode__",
]
show_missing = true
skip_empty = true
omit = [
  "*/__init__.py",
  "bookmarker/db/migrator/env.py",
]

[tool.coverage.html]
directory = "pytest-cov-report"

[tool.coverage.run]
branch = true
concurrency = ['thread', 'greenlet']

[tool.pytest.ini_options]
asyncio_mode = "auto"

# LINTERS

[tool.ruff]
line-length = 120

[tool.ruff.isort]
known-local-folder = ["messenger"]
lines-after-imports = 2

